Rename assemblies from ArcSheets (legacy) to ScriptableObjectTable (new)

--- a/Runtime/ScriptableObjectTables.asmdef
+++ b/Runtime/ScriptableObjectTables.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "ArcSheets",
+    "name": "ScriptableObjectTables",
     "rootNamespace": "",
     "references": [
         "TypeReferences"
