Change root namespace to LucasWarwick02.ScriptableObjectTables

--- a/Runtime/ScriptableObjectTables.asmdef
+++ b/Runtime/ScriptableObjectTables.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "ScriptableObjectTables",
+    "name": "LucasWarwick02.ScriptableObjectTables",
     "rootNamespace": "",
     "references": [
         "TypeReferences"
